<resources>
    <string name="app_name">Movies App</string>
    <string name="title_movies_trivia_question">Movies Trivia (%1$d/%2$d)</string>
    <string name="title_score_fragment">Tu puntaje</string>
    <string name="title_movies_trivia_fragment">Movies Trivia</string>
    <string name="btn_txt_send_answer">Responder</string>
    <string name="txt_score">Puntaje: %1$d</string>
    <string name="txt_congrats">Felicitaciones</string>
    <string name="txt_final_score">Puntaje final</string>
    <string name="btn_txt_play_again">Jugar nuevamente</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_trivia">Trivia</string>
    <string name="txt_popular">Populares</string>
    <string name="txt_favorite">Favoritas</string>
    <string name="title_home">Inicio</string>
    <string name="title_popular">Películas populares</string>
    <string name="title_detail_movie">Detalle</string>
    <string name="title_favorite">Mis favoritas</string>
    <string name="txt_description">Bienvenidos a Movies App, aplicación inspirada en temas sobre películas, su principal objetivo es dar a entender el funcionamiento básico de varios temas sobre el desarrollo en Android nativo. ¡Happy coding!</string>
    <string name="txt_popular_movies_list">Listado de películas populares del momento.</string>
    <string name="txt_favorite_movies_list">Listado de mis películas favoritas.</string>
    <string name="txt_movie_title">Título de la película</string>
    <string name="txt_overview">Resumen</string>
    <string name="txt_chip_add_favorite">Agregar</string>
    <string name="txt_chip_delete_favorite">Quitar</string>
    <string name="txt_snack_add_ok">Se ha agregó a favoritos</string>
</resources>