<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/triviaMoviesFragment"
        android:name="com.example.movieapp.views.trivia.TriviaMoviesFragment"
        android:label="@string/title_movies_trivia_fragment"
        tools:layout="@layout/fragment_trivia_movies">
        <action
            android:id="@+id/action_triviaMoviesFragment_to_scoreFragment"
            app:destination="@id/scoreFragment" />
    </fragment>
    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.example.movieapp.views.score.ScoreFragment"
        android:label="@string/title_score_fragment"
        tools:layout="@layout/fragment_score">
        <action
            android:id="@+id/action_scoreFragment_to_triviaMoviesFragment"
            app:destination="@id/triviaMoviesFragment"
            app:popUpTo="@id/triviaMoviesFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="finalScore"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.movieapp.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/popularMoviesFragment"
        android:name="com.example.movieapp.views.popular.PopularMoviesFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular_movies" />
    <fragment
        android:id="@+id/favoriteMoviesFragment"
        android:name="com.example.movieapp.views.favorite.FavoriteMoviesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite_movies" />
</navigation>